# discord-reminder-bot

./: .env-example  .env.example  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  LICENSE  Pipfile  README.md  discord-reminder-bot.service  docker-compose.yml  main.py  noxfile.py  pyproject.toml  requirements.txt
.gitea/workflows/: docker-publish.yml
.github/: SECURITY.md  copilot-instructions.md
.github/workflows/: codeql-analysis.yml  docker-publish.yml  poetry.yml  uv.yml
Docker/: README.md  docker-compose.yml
discord_reminder_bot/: .env.example  cmd_add.py  cmd_base.py  cmd_cron.py  cmd_interval.py  cmd_parse.py  countdown.py  create_pages.py  database.py  get_scheduler.py  handle_errors.py  helpers.py  interaction_responses.py  logging.py  main.py  misc.py  modals.py  old_scheduler.py  parse.py  parser.py  scheduler_new.py  scheduler_old.py  send_to_discord.py  settings.py  ui.py
extras/: .env.example  Dockerfile  docker-compose.yml
interactions/api/models/: README.md  misc.py
tests/: conftest.py  test_countdown.py  test_create_pages.py  test_discord_reminder_bot.py  test_dockerfile.py  test_main.py  test_misc.py  test_parse.py  test_parser.py  test_settings.py  test_ui.py
