[tool.poetry]
name = "discord-reminder-bot"
version = "2.0.0"
description = "Discord bot that allows you to set date, cron and interval reminders."
authors = ["Joakim Hellsén <tlovinator@gmail.com>"]
license = "GPL-3.0-or-later"
readme = "README.md"
homepage = "https://github.com/TheLovinator1/discord-reminder-bot"
repository = "https://github.com/TheLovinator1/discord-reminder-bot"
keywords = [
    "bot",
    "discord",
    "discord-reminder-bot",
    "discord-py-slash-command",
]

[tool.poetry.urls]
"Bug Tracker" = "https://github.com/TheLovinator1/discord-reminder-bot/issues"

[tool.poetry.scripts]
bot = "discord_reminder_bot.main:start"

[tool.poetry.dependencies]
python = ">=3.12,<3.13"
apscheduler = "^3.10.4"
dateparser = "^1.2.0"
discord-webhook = "^1.3.1"
hikari = "^2.0.0.dev124"
hikari-lightbulb = "^2.3.5"
python-dotenv = "^1.0.1"
loguru = "^0.7.2"
uvloop = { version = "^0.19.0", markers = "sys_platform == 'linux' or sys_platform == 'darwin'" }
sqlalchemy = "^2.0.29"

[tool.poetry.group.dev.dependencies]
ruff = "^0.3.4"
pytest = "^8.1.1"

[build-system]
build-backend = "poetry.core.masonry.api"
requires = [
  "poetry-core",
]

[tool.isort]
profile = "black"

[tool.ruff]
fix = true
unsafe-fixes = true
preview = true
lint.select = ["ALL"]
lint.ignore = [
    "CPY001",  # Missing copyright notice at top of file
    "ERA001",  # Found commented-out code
    "FIX002",  # Line contains TODO
    "D100",    # Checks for undocumented public module definitions.
    "D101",    # Checks for undocumented public class definitions.
    "D102",    # Checks for undocumented public method definitions.
    "D104",    # Missing docstring in public package.
    "D105",    # Missing docstring in magic method.
    "D106",    # Checks for undocumented public class definitions, for nested classes.
    "D107",    # Checks for public __init__ method definitions that are missing docstrings.
    "COM812",  # Checks for the absence of trailing commas.
    "ISC001",  # Checks for implicitly concatenated strings on a single line.
    "PLR6301", # Checks for the presence of unused self parameter in methods definitions.
    "ARG001",  # Checks for the presence of unused arguments in function definitions.
]

[tool.ruff.lint.per-file-ignores]
"**/tests.py" = [
    "S101",    # Allow asserts
    "ARG",     # Allow unused arguments
    "FBT",     # Don't care about booleans as positional arguments in tests, e.g. via @pytest.mark.parametrize()
    "D102",    # Allow missing docstrings in tests
    "PLR6301", # Checks for the presence of unused self parameter in methods definitions.
]

[tool.ruff.lint.pydocstyle]
convention = "google"
